--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -6,3 +6,5 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
 </head>
+<body>
+</body>
