--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -6,12 +6,42 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
 </head>
+
 <body>
+
+	<!--header and picture-->
+	<div class='row'>
+		<div class='col-sm-8'>
+	<!-- header 1 -->
+	<h1> Medscription </h1>
+		</div>
+	</div>
+
+		<div class='col-sm-4'>
+	<!-- image -->
+		</div>
+
+	</div>
+
+	<!--get started button-->
+	<div class='row'>
+		<a href="#" class="btn btn-info" role="button">	Get Started</a>
+	</div>
+
+	<!--help and link to media-->
+	<div class='row'>
+
+		<div class='col-sm-4'>
+		<!-- First column content -->
+		</div>
+
+		<div class='col-sm-4'>
+		<!-- Second column content -->
+		</div>
+
+		<div class='col-sm-4'>
+		<!-- Third column content -->
+		</div>
+	</div>
+
 </body>
-
-
-this is a change
-....
-change 2
-change 3
-change 4
