creating link to button
linked to get started

--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -25,7 +25,7 @@
 
 	<!--get started button-->
 	<div class='row'>
-		<a href="#" class="btn btn-info" role="button">	Get Started</a>
+		<a href="Question1.html" class="btn btn-info" role="button">Get Started</a>
 	</div>
 
 	<!--help and link to media-->
