--- a/FirstSite/Question1.html
+++ b/FirstSite/Question1.html
@@ -2,12 +2,26 @@
 
 <head>
 	<title>Menstruscription</title>
-	<link href='bootstrap.2dist/css/bootstrap.css' rel='stylesheet'>
+	<link href='./css/bootstrap.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+<div class='container-fluid'>
 
-	<p> yo yo </p>
-	</body>
+	<div class='row row-first'>
+		<!-- insert advert picture-->
+	</div>
+
+	<div class='row'>
+		<h1 class='question'> How often is your menstrual cycle?</h1>
+	</div>
+
+	<div class='row row-answer'>
+	</div>
+
+
+	
+</div>
+</body>
