--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -2,16 +2,30 @@
 
 <head>
 	<title>Menstruscription</title>
-	<link href='bootstrap.2dist/css/bootstrap.css' rel='stylesheet'>
+	<link href='./css/bootstrap.css' rel='stylesheet'>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
 
-	<!--header and picture-->
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+  	<div class="container-fluid">
+    	<ul class="nav navbar-nav">
+      		<li class="active"><a href="index.html">Home</a></li>
+      		<li class="active"><a href="about.html">About Us</a></li>
+      		<li class="active"><a href="products_list.html">Products</a></li>
+    	</ul>
+  	</div>
+	</nav>
+
+<div class='container-fluid'>
+
+
+	<!-- header and picture -->
+	<div class='jumbotron'>
 	<div class='row'>
-		<div class='col-sm-8'>
+		<div class='col-md-8'>
 	<!-- header 1 -->
 	<h1> Medscription </h1>
 		</div>
@@ -20,7 +34,7 @@
 		<div class='col-sm-4'>
 	<!-- image -->
 		</div>
-
+	</div>	
 	</div>
 
 	<!--get started button-->
@@ -43,5 +57,5 @@
 		<!-- Third column content -->
 		</div>
 	</div>
-
+</div>
 </body>
