--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -27,7 +27,7 @@
 	<div class='row'>
 		<div class='col-md-8'>
 	<!-- header 1 -->
-	<h1> Medscription </h1>
+	<h1> Menstruscription </h1>
 		</div>
 	</div>
 
