--- a/FirstSite/about.html
+++ b/FirstSite/about.html
@@ -42,7 +42,7 @@
 	<div class='row'>
 		<div class='col-md-8'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h1> About Us  </h1>
 		</div>
 	</div>
 
@@ -54,7 +54,7 @@
 
 	<!--get started button-->
 	<div class='row text-center'>
-		<a href="Question1.html" class="btn btn-danger btn-lg btn-block" role="button" >Get Started</a>
+		<a href="index.html" class="btn btn-danger btn-lg btn-block" role="button" >Back Home</a>
 	</div>
 
 	<!--help and link to media-->
