--- a/FirstSite/regular.html
+++ b/FirstSite/regular.html
@@ -37,29 +37,29 @@
 <div class='jumbotron'>
 </div> 
 
-  <div id="questions" class="text-center">
+  <div id="buzz" class="text-center">
   <div class="container-fluid">
-  	<h2> How often do you menstruate?</h2>
+  	<h2> How Heavy is your menstrual flow?</h2>
 	<div class="row">
 
       <div class='col-sm-4'>
       <img src='#' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
- 		 	<a href='irregular.html'>Irregular</a>
+ 		 	<a href='regular_very_heavy.html'>Very Heavy</a>
 		</blockquote>
       </div> 
 
       <div class='col-sm-4'>
       <img src='#' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
-  		<a href='regular.html'>Regular</a>
+  		<a href='regular_heavy.html'>Heavy</a>
   		</blockquote>
       </div> 
 
       <div class='col-sm-4'>
       <img src='#g' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
- 		 <a href='post_partum.html'>Post partum</a>
+ 		 <a href='regular_light.html'>Light</a>
   	 	</blockquote>
       </div> 
 
