--- a/FirstSite/regular_light.html
+++ b/FirstSite/regular_light.html
@@ -40,21 +40,20 @@
 	<!-- header and picture -->
 	<div class='jumbotron'>
 	<div class='row'>
-		<div class='col-md-8'>
+		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
 	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> <small> Regular, Light Menstrual cycles</small></h2>
 		</div>
 	</div>
 
-		<div class='col-sm-4'>
-	<!-- image -->
-		</div>
+	
 	</div>	
 	</div>
 
 	<!--get started button-->
 	<div class='row text-center'>
-		<a href="Question1.html" class="btn btn-danger btn-lg btn-block" role="button" >Get Started</a>
+		<a href="index.html" class="btn btn-danger btn-lg btn-block" role="button" >Back home</a>
 	</div>
 
 	<!--help and link to media-->
