inserting places to insert text
For Nadja

--- a/FirstSite/irregular_heavy.html
+++ b/FirstSite/irregular_heavy.html
@@ -46,9 +46,42 @@
 	<h2> <small> Irregular, Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
-
 	
+
+	<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> blah blah blah </p>
+
+	</div>
 	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> hihihih </li>
+					<li> hihihihhi </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> hihihih </li>
+					<li> hihihihhi </li>
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> hihihihi </p>
+		</div>
+
+</div>
 	</div>
 
 	<!--get started button-->
