UPDATED INSERTED TEXT

--- a/FirstSite/irregular_light.html
+++ b/FirstSite/irregular_light.html
@@ -46,7 +46,39 @@
 	<h2> <small> Irregular, Light Menstrual cycles</small></h2>
 		</div>
 	</div>
+<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a light and irregular menstruation, this is the products we reccomend to you. </p>
 
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> TOTM Tampons </li>
+					<li> BON Tampons  </li>
+					<li> The Honest Co. </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> The Honest Co. </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> For a light irregular period we recommend organic cotton-based products for a comfortable companion for day and night. </p>
+		</div>
 	
 	</div>	
 	</div>
