--- a/FirstSite/irregular_heavy.html
+++ b/FirstSite/irregular_heavy.html
@@ -43,15 +43,13 @@
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
 	<h1> Manage your Menstrual Cycle  </h1>
-	<h2> <small> Irregular, Heavy Menstrual cycles</small></h2>
+	<h2> <small> Irregular, heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
-	
-
-	<div class='row'>
+<div class='row'>
 		<div class='col-md-12 text-center'>
 		<h3> introduction</h3>
-		<p> blah blah blah </p>
+		<p> If you have a heavy and irregular menstruation, this is the products we reccomend to you. </p>
 
 	</div>
 	</div>	
@@ -60,16 +58,18 @@
 			<div class='col-sm-6 text-center'>
 				<h3> tampon </h3>
 				<ul>
-					<li> hihihih </li>
-					<li> hihihihhi </li>
+					<li> o.b. Tampons </li>
+					<li> Maxime Tampons  </li>
+					<li> The Honest Co. </li>
 				</ul>
 
 			</div>
 			<div class='col-sm-6 text-center'>
 				<h3> pads </h3>
 				<ul>
-					<li> hihihih </li>
-					<li> hihihihhi </li>
+					<li> Natracare </li>
+					<li> Organyc </li>
+					
 				</ul>
 
 			</div>
@@ -78,10 +78,10 @@
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
 			<h3> conclusion </h3>
-			<p> hihihihi </p>
+			<p> For a heavy irregular period the proposed products offer optimal protection for a worryless night out with friends or your next dancing competition. Let the party begin. </p>
 		</div>
-
-</div>
+	
+	</div>	
 	</div>
 
 	<!--get started button-->
