--- a/FirstSite/irregular_heavy.html
+++ b/FirstSite/irregular_heavy.html
@@ -49,7 +49,7 @@
 <div class='row'>
 		<div class='col-md-12 text-center'>
 		<h3> introduction</h3>
-		<p> If you have a heavy and irregular menstruation, this is the products we reccomend to you. </p>
+		<p> If you have a heavy and irregular menstruation, this is the products we recomend to you. </p>
 
 	</div>
 	</div>	
