UPDATED INSERTED TEXT

--- a/FirstSite/irregular_very_heavy.html
+++ b/FirstSite/irregular_very_heavy.html
@@ -47,6 +47,41 @@
 		</div>
 	</div>
 
+		<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a very heavy and irregular menstruation, this is the products we reccomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Tampax Pearl Plastic Tampons </li>
+					<li> U by Kotex Click Compact Tampons  </li>
+					<li> Playtex Gentle Glide 360 Unscented Tampon </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Always Night pads </li>
+					<li> Bodyform </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> We want you to feel comfortable in your own body, no matter if you are a student at have to sit important exams, if you are in the office, or a mother at home. If you have a heavy period, we want you to be carefree, these products will get you through the day! </p>
+		</div>
+
 	
 	</div>	
 	</div>
