UPDATED INSERTED TEXT

--- a/FirstSite/regular_heavy.html
+++ b/FirstSite/regular_heavy.html
@@ -46,8 +46,41 @@
 	<h2> <small> Regular, Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a heavy and regular menstruation, this is the products we reccomend to you. </p>
 
-	
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Seventh Generation Applicator Tampons </li>
+					<li> Natcare Tampons - super </li>
+					<li> o.b. Ultra Absorbency Tampons </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Always Happy Days Pads </li>
+					<li> Carefree Sport Pads </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> You want to perform at full performance at any time of the month. You are fed up with having to deal with regular heavy bleeding and want to focus on your goals in life. We trust these products will help you pursuing your goals without any distraction. </p>
+		</div>
+
 	</div>	
 	</div>
 
