UPDATED INSERTED TEXT

--- a/FirstSite/regular_light.html
+++ b/FirstSite/regular_light.html
@@ -47,6 +47,40 @@
 		</div>
 	</div>
 
+		<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a light and regular menstruation, this is the products we reccomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Playtex Gentle Glide Tampons </li>
+					<li> Tampax Pearl Compact  </li>
+					<li> o.b. Pro Comfort </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Maxithins </li>
+					<li> U by Kotex Sensitive </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> Comfortable tampons are a must-have when you’re experiencing only a light flow. There are lots of brands on the market, so do your research and don’t be afraid to try different products to find out which tampons best suit your needs and provide you with the best possible protection. </p>
+		</div>
 	
 	</div>	
 	</div>
