Updated inserted text

--- a/FirstSite/regular_very_heavy.html
+++ b/FirstSite/regular_very_heavy.html
@@ -26,7 +26,7 @@
         			<a class="nav-link" href="about.html">About Us</a>
       			</li>
       			<li class="nav-item">
-        			<a class="nav-link" hhref="products_list.html">Products</a>
+        			<a class="nav-link" href="products_list.html">Products</a>
       			</li>
     		</ul>
 
@@ -47,7 +47,40 @@
 		</div>
 	</div>
 
-	
+	<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a very heavy menstruation on a regular basis, this is the products we recomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Tampax pro </li>
+					<li> Tampax Pearl Tampons with LeakGuard </li>
+					<li> The Honest Co. </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Always Maxi Size Extra Heavy Overnight Pads  </li>
+					<li> UBK Allnighter Maxi Pad </li>
+				
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> Stay active throughout the day, no matter what. If you are experiencing a heavy flow consider these brands as your saviour. </p>
+		</div>
 	</div>	
 	</div>
 
