--- a/FirstSite/irregular_light.html
+++ b/FirstSite/irregular_light.html
@@ -26,7 +26,7 @@
         			<a class="nav-link" href="about.html">About Us</a>
       			</li>
       			<li class="nav-item">
-        			<a class="nav-link" hhref="products_list.html">Products</a>
+        			<a class="nav-link" href="products_list.html">Products</a>
       			</li>
     		</ul>
 
@@ -49,7 +49,7 @@
 <div class='row'>
 		<div class='col-md-12 text-center'>
 		<h3> introduction</h3>
-		<p> If you have a light and irregular menstruation, this is the products we reccomend to you. </p>
+		<p> If you have a light and irregular menstruation, this is the products we recomend to you. </p>
 
 	</div>
 	</div>	
