--- a/FirstSite/post_partum_very_heavy.html
+++ b/FirstSite/post_partum_very_heavy.html
@@ -26,7 +26,7 @@
         			<a class="nav-link" href="about.html">About Us</a>
       			</li>
       			<li class="nav-item">
-        			<a class="nav-link" hhref="products_list.html">Products</a>
+        			<a class="nav-link" href="products_list.html">Products</a>
       			</li>
     		</ul>
 
