--- a/FirstSite/about.html
+++ b/FirstSite/about.html
@@ -44,7 +44,7 @@
 	<!-- header 1 -->
 	<h1> About Us  </h1>
 		
-		<p> Finding the right sanitary products can be a time-consuming task for any woman, even for experienced women who, at least in theory, should know exactly what to look for. If it’s your first time, however, the task becomes infinitely harder. We thought it would be best to help you with what would otherwise be a difficult task by presenting you with the best possible options women have these days when it comes to choosing tampons.
+		<p> Finding the right sanitary products can be a time-consuming task for any woman, even for experienced women who, at least in theory, should know exactly what to look for. If it’s your first time, however, the task becomes infinitely harder. We thought it would be best to help you with what would otherwise be a difficult task by presenting you with the best possible options women have these days when it comes to choosing a brand.
 
 Although each brand comes with its own particularities, you fill find most of them capable of meeting most women’s demands. So without further ado, we at CodeFirst:Girls decided zo put together our favorie brands. </p>
 			
