--- a/FirstSite/irregular_heavy.html
+++ b/FirstSite/irregular_heavy.html
@@ -58,17 +58,17 @@
 			<div class='col-sm-6 text-center'>
 				<h3> tampon </h3>
 				<ul>
-					<li> o.b. Tampons </li>
-					<li> Maxime Tampons  </li>
-					<li> The Honest Co. </li>
+					<li> o.b. Tampons Original Ultra </li>
+					<li> Maxime Tampons Pro Comfort  </li>
+					<li> The Honest Co. HappyDays </li>
 				</ul>
 
 			</div>
 			<div class='col-sm-6 text-center'>
 				<h3> pads </h3>
 				<ul>
-					<li> Natracare </li>
-					<li> Organyc </li>
+					<li> Natracare Carefree </li>
+					<li> Organyc Invisible </li>
 					
 				</ul>
 
