--- a/FirstSite/irregular_light.html
+++ b/FirstSite/irregular_light.html
@@ -58,16 +58,17 @@
 			<div class='col-sm-6 text-center'>
 				<h3> tampon </h3>
 				<ul>
-					<li> TOTM Tampons </li>
-					<li> BON Tampons  </li>
-					<li> The Honest Co. </li>
+					<li> TOTM Smile Tampons </li>
+					<li> BON Tampons Silk  </li>
+					<li> o.b. Invisible Touch </li>
 				</ul>
 
 			</div>
 			<div class='col-sm-6 text-center'>
 				<h3> pads </h3>
 				<ul>
-					<li> The Honest Co. </li>
+					<li> Flower Extra Sensitive Scented Pads </li>
+					<li> Ogranyc Light Pads </li>
 					
 				</ul>
 
