--- a/FirstSite/regular_light.html
+++ b/FirstSite/regular_light.html
@@ -59,7 +59,7 @@
 			<div class='col-sm-6 text-center'>
 				<h3> tampon </h3>
 				<ul>
-					<li> Playtex Gentle Glide Tampons </li>
+					<li> Playtex Ultra Sensitive Tampons </li>
 					<li> Tampax Pearl Compact  </li>
 					<li> o.b. Pro Comfort </li>
 				</ul>
@@ -68,7 +68,7 @@
 			<div class='col-sm-6 text-center'>
 				<h3> pads </h3>
 				<ul>
-					<li> Maxithins </li>
+					<li> Maxithins Trust </li>
 					<li> U by Kotex Sensitive </li>
 					
 				</ul>
