--- a/FirstSite/regular_very_heavy.html
+++ b/FirstSite/regular_very_heavy.html
@@ -59,9 +59,9 @@
 			<div class='col-sm-6 text-center'>
 				<h3> tampon </h3>
 				<ul>
-					<li> Tampax pro </li>
+					<li> Tampax Pro Sensitive </li>
 					<li> Tampax Pearl Tampons with LeakGuard </li>
-					<li> The Honest Co. </li>
+					<li> The Honest Co. First Choice </li>
 				</ul>
 
 			</div>
