--- a/FirstSite/post_partum_heavy.html
+++ b/FirstSite/post_partum_heavy.html
@@ -46,6 +46,42 @@
 	<h2> <small> Post Partum, Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+		
+	<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have recently given birth and have a heavy and irregular menstruation, this is the products we reccomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Tampax Pearl Ultra Protect </li>
+					<li> U by Kotex For Mothers </li>
+					<li> SensiCare Extra Protection </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Time for Mum Organic Cotton Pads </li>
+					<li> Carefree Maxi Pads </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> It's exciting to be a Mum! Whether you want to run around and play or snuggle up with your little one. Now is not the time to experiment with different brands, these products will help you to give your little hero undivided attention! </p>
+		</div>
+
 
 	
 	</div>	
