--- a/FirstSite/post_partum_light.html
+++ b/FirstSite/post_partum_light.html
@@ -46,6 +46,40 @@
 	<h2> <small> Post Partum, Light Menstrual cycles</small></h2>
 		</div>
 	</div>
+<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have recetnly given birth and have a light and irregular menstruation, this is the products we reccomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> o.b. Playground Protection </li>
+					<li> Organyc SelfCare </li>
+					<li> Emma Sensitive Touch </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> Carefree Maxi Flex </li>
+					<li> Bodyform Xtra Protection </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> We want you to feel comfortable in your own body, no matter if you are a student at have to sit important exams, if you are in the office, or a mother at home. If you have a heavy period, we want you to be carefree, these products will get you through the day! </p>
+		</div>
 
 	
 	</div>	
