--- a/FirstSite/post_partum_light.html
+++ b/FirstSite/post_partum_light.html
@@ -78,7 +78,7 @@
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
 			<h3> conclusion </h3>
-			<p> We want you to feel comfortable in your own body, no matter if you are a student at have to sit important exams, if you are in the office, or a mother at home. If you have a heavy period, we want you to be carefree, these products will get you through the day! </p>
+			<p> You have a new member in your family! Life is a buzz and there is much to think of with a new baby in your life. Take a moment to take care of yourself and your body with these products. </p>
 		</div>
 
 	
