--- a/FirstSite/post_partum_very_heavy.html
+++ b/FirstSite/post_partum_very_heavy.html
@@ -46,6 +46,40 @@
 	<h2> <small> Post Partum, Very Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+<div class='row'>
+		<div class='col-md-12 text-center'>
+		<h3> introduction</h3>
+		<p> If you have a recently given birth and a very heavy menstruation, this is the products we reccomend to you. </p>
+
+	</div>
+	</div>	
+
+	<div class='row'>
+			<div class='col-sm-6 text-center'>
+				<h3> tampon </h3>
+				<ul>
+					<li> Jasmine Breeze for Mothers </li>
+					<li> U by Kotex Active Protection  </li>
+					<li> Always Comfort ++ </li>
+				</ul>
+
+			</div>
+			<div class='col-sm-6 text-center'>
+				<h3> pads </h3>
+				<ul>
+					<li> L.A. Nights Strong Protection </li>
+					<li> Linda Ultra Pads </li>
+					
+				</ul>
+
+			</div>
+	</div>
+
+	<div class='row'> 
+		<div class='col-sm-12 text-center'>
+			<h3> conclusion </h3>
+			<p> Tired of being tired? These products will guarantee you carefree nights to give you extra energy to take care of your little one. Treat yourself to a comfortable night of sleep with these products. </p>
+		</div>
 
 	
 	</div>	
