--- a/FirstSite/Question1.html
+++ b/FirstSite/Question1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Mentruscription</title>
+  <title>Menstruscription</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -38,28 +38,26 @@
 </div> 
 
   <div id="questions" class="text-center">
-  <div class="container-fluid">
+  <div class="container-fluid lower">
   	<h2> How often do you menstruate?</h2>
 	<div class="row">
 
       <div class='col-sm-4'>
-      <img src='#' class="rounded-circle mx-auto d-block">
-      	<blockquote class="blockquote">
- 		 	<a href='irregular.html'>Irregular</a>
-		</blockquote>
+        <img src='#' class="rounded-circle mx-auto d-block">
+        <blockquote class="blockquote">
+ 		 	   <a class= "type" href='irregular.html'>Irregular</a>
+		    </blockquote>
       </div> 
-
+      <div class='col-sm-4'>
+        <img src='#' class="rounded-circle mx-auto d-block">
+        <blockquote class="blockquote">
+  		    <a class= "type" href='regular.html'>Regular</a>
+  		  </blockquote>
+      </div> 
       <div class='col-sm-4'>
       <img src='#' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
-  		<a href='regular.html'>Regular</a>
-  		</blockquote>
-      </div> 
-
-      <div class='col-sm-4'>
-      <img src='#g' class="rounded-circle mx-auto d-block">
-      	<blockquote class="blockquote">
- 		 <a href='post_partum.html'>Post partum</a>
+ 		 <a class= "type" href='post_partum.html'>Post partum</a>
   	 	</blockquote>
       </div> 
 
@@ -67,15 +65,10 @@
 	</div>
   	</div>
 	
-  
-
   <script src="https://code.jquery.com/jquery.js"></script>
   
   <script type="text/javascript" src="./js/bootstrap.bundle.js"></script>
 
 </body>
-
-<div class='jumbotron fixed-bottom'>
-</div> 
 
 </html>
