--- a/FirstSite/about.html
+++ b/FirstSite/about.html
@@ -38,24 +38,38 @@
 
 
 	<!-- header and picture -->
-	<div class='jumbotron'>
-	<div class='row'>
-		<div class='col-md-8'>
+<div class='jumbotron'>
+
+	<div class='row text-center'>
 	<!-- header 1 -->
 	<h1> About Us  </h1>
 		
-		<p> Finding the right sanitary products can be a time-consuming task for any woman, even for experienced women who, at least in theory, should know exactly what to look for. If it’s your first time, however, the task becomes infinitely harder. We thought it would be best to help you with what would otherwise be a difficult task by presenting you with the best possible options women have these days when it comes to choosing a brand.
+		<p> Finding the right sanitary products can be a time-consuming task for any woman, even for experienced women who, at least in theory, should know exactly what to look for. If it’s your first time, however, the task becomes infinitely harder. We thought it would be best to help you with what would otherwise be a difficult task by presenting you with the best possible options women have these days when it comes to choosing a brand.</p>
 
-Although each brand comes with its own particularities, you fill find most of them capable of meeting most women’s demands. So without further ado, we at CodeFirst:Girls decided zo put together our favorie brands. </p>
+		<p>Although each brand comes with its own particularities, you fill find most of them capable of meeting most women’s demands. So without further ado, we at CodeFirst:Girls decided to put together our favorie brands. </p>
 			
+	</div>
+	<div class="row text-center">
+		
+			<form role='form' class='form-inline'>
+        <div class="form-group">
+          	<label for="email">Find out more</label>
+          	<input type="text" class='form-control' name="email" placeholder="Enter your email" >
+          	<button type="submit" class='btn btn-success'>Send</button>
+          </div>
+          	</form>
+  
+		</div>
+			<br>
+		<div class= "row text-center">
+  				<button class="btn btn-lg btn-twitter">Twitter</button>
+   				<button class="btn btn-lg btn-facebook">Facebook</button>
+    			<button class="btn btn-lg btn-pinterest">Pinterest</button>
 		</div>
 	</div>
+</div>	
 
-		<div class='col-sm-4'>
-	<!-- image -->
-		</div>
-	</div>	
-	</div>
+</div>
 
 	<!--get started button-->
 	<div class='row text-center'>
