--- a/FirstSite/index.html
+++ b/FirstSite/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body class="index">
 
 	<nav class="navbar navbar-expand-lg bg-dark navbar-dark fixed-top" role="navigation">
 		<div class = "container-fluid">
@@ -40,12 +40,10 @@
 	<!-- header and picture -->
 	<div class='jumbotron'>
 	<div class='row'>
-		<div class='col-md-8'>
 	<!-- header 1 -->
 
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h1 class="text-center"> Manage your Menstrual Cycle  </h1>
 	
-		</div>
 	</div>
 
 		<div class='col-sm-4'>
@@ -64,17 +62,22 @@
 
 		<div class='col-sm-4'>
 		<!-- First column content -->
+		<img class="period" src="period1.jpg" width="380px"
+  	height="400px">
 		</div>
 
 		<div class='col-sm-4'>
 		<!-- Second column content -->
+		<img class= "period" src="period2.jpg" width="380px"
+  	height="400x">
 		</div>
-
-		<div class='col-sm-4'>
-		<!-- Third column content -->
-		</div>
+		<div col class="col-sm-4">
+		<img class= "period" src="period4.jpg" width="380px"
+  	height="400px">
+  </div>
 	</div>
 </div>
+
 	<script src="https://code.jquery.com/jquery.js"></script>
   
   	<script type="text/javascript" src="./js/bootstrap.bundle.js"></script>
