--- a/FirstSite/post_partum_very_heavy.html
+++ b/FirstSite/post_partum_very_heavy.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -42,21 +42,22 @@
 	<div class='row'>
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> Manage your Menstrual Cycle  </h2>
 	<h2> <small> Post Partum, Very Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+	<br>
 <div class='row'>
 		<div class='col-md-12 text-center'>
-		<h3> introduction</h3>
-		<p> If you have a recently given birth and a very heavy menstruation, this is the products we reccomend to you. </p>
+		<h3 class="conc"> Introduction</h3>
+		<p> If you have a recently given birth and a very heavy menstruation, these are the products we reccomend to you. </p>
 
 	</div>
 	</div>	
-
+<br><br>
 	<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h3> tampon </h3>
+			<div class='col-sm-6 table'>
+				<h3> Tampons </h3>
 				<ul>
 					<li> Jasmine Breeze for Mothers </li>
 					<li> U by Kotex Active Protection  </li>
@@ -64,8 +65,8 @@
 				</ul>
 
 			</div>
-			<div class='col-sm-6 text-center'>
-				<h3> pads </h3>
+			<div class='col-sm-6 table'>
+				<h3> Pads </h3>
 				<ul>
 					<li> L.A. Nights Strong Protection </li>
 					<li> Linda Ultra Pads </li>
@@ -74,10 +75,10 @@
 
 			</div>
 	</div>
-
+<br>
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
-			<h3> conclusion </h3>
+			<h3 class="conc"> Conclusion </h3>
 			<p> Tired of being tired? These products will guarantee you carefree nights to give you extra energy to take care of your little one. Treat yourself to a comfortable night of sleep with these products. </p>
 		</div>
 
