--- a/FirstSite/regular.html
+++ b/FirstSite/regular.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Mentruscription</title>
+  <title>Menstruscription</title>
  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -45,21 +45,21 @@
       <div class='col-sm-4'>
       <img src='#' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
- 		 	<a href='regular_very_heavy.html'>Very Heavy</a>
+ 		 	<a class= "type" href='regular_very_heavy.html'>Very Heavy</a>
 		</blockquote>
       </div> 
 
       <div class='col-sm-4'>
       <img src='#' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
-  		<a href='regular_heavy.html'>Heavy</a>
+  		<a class= "type" href='regular_heavy.html'>Heavy</a>
   		</blockquote>
       </div> 
 
       <div class='col-sm-4'>
       <img src='#g' class="rounded-circle mx-auto d-block">
       	<blockquote class="blockquote">
- 		 <a href='regular_light.html'>Light</a>
+ 		 <a class= "type" href='regular_light.html'>Light</a>
   	 	</blockquote>
       </div> 
 
@@ -74,8 +74,5 @@
   <script type="text/javascript" src="./js/bootstrap.bundle.js"></script>
 
 </body>
-
-<div class='jumbotron fixed-bottom'>
-</div> 
 
 </html>
