--- a/FirstSite/irregular_heavy.html
+++ b/FirstSite/irregular_heavy.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -42,21 +42,22 @@
 	<div class='row'>
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> Manage your Menstrual Cycle  </h2>
 	<h2> <small> Irregular, heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+	<br>
 <div class='row'>
 		<div class='col-md-12 text-center'>
-		<h3> introduction</h3>
-		<p> If you have a heavy and irregular menstruation, this is the products we recomend to you. </p>
+		<h3 class="conc"> Introduction</h3>
+		<p> If you have a heavy and irregular menstruation, these are the products we recomend to you. </p>
 
 	</div>
 	</div>	
-
+<br><br>
 	<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h3> tampon </h3>
+			<div class='col-sm-6 table'>
+				<h3> Tampons </h3>
 				<ul>
 					<li> o.b. Tampons Original Ultra </li>
 					<li> Maxime Tampons Pro Comfort  </li>
@@ -64,8 +65,8 @@
 				</ul>
 
 			</div>
-			<div class='col-sm-6 text-center'>
-				<h3> pads </h3>
+			<div class='col-sm-6 table'>
+				<h3> Pads </h3>
 				<ul>
 					<li> Natracare Carefree </li>
 					<li> Organyc Invisible </li>
@@ -74,10 +75,10 @@
 
 			</div>
 	</div>
-
+<br>
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
-			<h3> conclusion </h3>
+			<h3 class="conc"> Conclusion </h3>
 			<p> For a heavy irregular period the proposed products offer optimal protection for a worryless night out with friends or your next dancing competition. Let the party begin. </p>
 		</div>
 	
