--- a/FirstSite/irregular_light.html
+++ b/FirstSite/irregular_light.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -42,21 +42,23 @@
 	<div class='row'>
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> Manage your Menstrual Cycle  </h2>
 	<h2> <small> Irregular, Light Menstrual cycles</small></h2>
 		</div>
 	</div>
+	<br>
 <div class='row'>
 		<div class='col-md-12 text-center'>
-		<h3> introduction</h3>
-		<p> If you have a light and irregular menstruation, this is the products we recomend to you. </p>
+		<h3 class="conc"> Introduction</h3>
+		<p> If you have a light and irregular menstruation, these are the products we recomend to you. </p>
 
 	</div>
 	</div>	
 
+	<br><br>
 	<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h3> tampon </h3>
+			<div class='col-sm-6 table'>
+				<h3> Tampons </h3>
 				<ul>
 					<li> TOTM Smile Tampons </li>
 					<li> BON Tampons Silk  </li>
@@ -64,8 +66,8 @@
 				</ul>
 
 			</div>
-			<div class='col-sm-6 text-center'>
-				<h3> pads </h3>
+			<div class='col-sm-6 table'>
+				<h3> Pads </h3>
 				<ul>
 					<li> Flower Extra Sensitive Scented Pads </li>
 					<li> Ogranyc Light Pads </li>
@@ -74,10 +76,10 @@
 
 			</div>
 	</div>
-
+<br>
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
-			<h3> conclusion </h3>
+			<h3 class="conc"> Conclusion </h3>
 			<p> For a light irregular period we recommend organic cotton-based products for a comfortable companion for day and night. </p>
 		</div>
 	
