--- a/FirstSite/products_list.html
+++ b/FirstSite/products_list.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -38,86 +38,80 @@
 
 
 	<!-- header and picture -->
-	<div class='jumbotron'>
-	<div class='row'>
-		<div class='col-md-8'>
+	<div class='jumbotron' align="center">
 	<!-- header 1 -->
-	<div class='row'>
-		<div class='col-md-12 text-center'>
-	<h1> List of products  </h1>
+		<div class="row prod">
+		<h1 > List of products</h1>
 			
-		<p> When it comes to sanitary products, women have quite a few different brands and models to choose from, each with its own particularities. Whether for general purpose or for athletic needs, these products have to meet some pretty rigorous standards, both in terms of structural integrity and comfort.
+		<p> When it comes to sanitary products, women have quite a few different brands and models to choose from, each with its own particularities. Whether for general purpose or for athletic needs, these products have to meet some pretty rigorous standards, both in terms of structural integrity and comfort.</p>
 
-Depending on your lifestyle, you should be able to choose the product that best suits your needs, be it according to personalized flexibility standards or according to their overall construction. In this regard, here is a list of products we trust in. </p>
+		<p>Depending on your lifestyle, you should be able to choose the product that best suits your needs, be it according to personalized flexibility standards or according to their overall construction. In this regard, here is a list of products we trust in. </p>
 			
-	</div>
-	</div>	
-			<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h2> Tampons </h2>
-				<ul>			
-
-			<li> o.b. Tampons Original Ultra </li>
-			<li> Maxime Tampons Pro Comfort </li>
-			<li> The Honest Co. HappyDays </li>
-			<li> TOTM Smile Tampons </li>
-			<li> BON Tampons Silk </li>
-			<li> o.b. Invisible Touch </li>
-			<li> Flower Extra Sensitive Scented Pads </li>
-			<li> U by Kotex Click Compact Tampons </li>
-			<li> Playtex Gentle Glide 360 Unscented Tampon </li>
-			<li> Seventh Generation Applicator Tampons </li>
-			<li> Natcare Tampons - super </li>
-			<li> o.b. Ultra Absorbency Tampons </li>
-			<li> Playtex Ultra Sensitive Tampons </li>
-			<li> Tampax Pearl Compact  </li>
-			<li> o.b. Pro Comfort </li>
-			<li> Tampax Pro Sensitive </li>
-			<li> Tampax Pearl Tampons with LeakGuard </li>
-			<li> The Honest Co. First Choice </li>
-			<li> Tampax Pearl Ultra Protect </li>
-			<li> U by Kotex For Mothers </li>
-			<li> SensiCare Extra Protection </li>
-			<li> o.b. Playground Protection </li>
-			<li> Organyc SelfCare </li>
-			<li> Emma Sensitive Touch </li>
-			<li> Jasmine Breeze for Mothers </li>
-			<li> U by Kotex Active Protection  </li>
-			<li> Always Comfort ++ </li>
+	<div class= "table">
+	
+		<table align="center">
+		<tr>
+			<th><h2> Tampons </h2> </th>
+		
+			<th><h2> Pads </h2> </th>
+		</tr>
+		<tr>		
+			<td><ul>
 			
-			</ul>
-
-			<div class='col-sm-6 text-center'>
-				<h2> Pads </h2>
-				<ul>
-			
-			<li> Natracare Carefree Pads </li>
-			<li> Organyc Invisible Pads </li>
-			<li> Ogranyc Light Pads  </li>
-			<li> Always Night Pads </li>
-			<li> Bodyform For You Pads</li>
-			<li> Always Happy Days Pads </li>
-			<li> Carefree Sport Pads </li>
-			<li> Maxithins Trust </li>
-			<li> U by Kotex Sensitive </li>
-			<li> Always Maxi Size Extra Heavy Overnight Pads  </li>
-			<li> UBK Allnighter Maxi Pad </li>
-			<li> Time for Mum Organic Cotton Pads </li>
-			<li> Carefree Maxi Pads </li>
-			<li> Carefree Maxi Flex </li>
-			<li> Bodyform Xtra Protection </li>
-			<li> L.A. Nights Strong Protection </li>
-			<li> Linda Ultra Pads </li>
+					<li> Natracare Carefree Pads </li>
+					<li> Organyc Invisible Pads </li>
+					<li> Ogranyc Light Pads  </li>
+					<li> Always Night Pads </li>
+					<li> Bodyform For You Pads</li>
+					<li> Always Happy Days Pads </li>
+					<li> Carefree Sport Pads </li>
+					<li> Maxithins Trust </li>
+					<li> U by Kotex Sensitive </li>
+					<li> Always Maxi Size Extra Heavy Overnight Pads  </li>
+					<li> UBK Allnighter Maxi Pad </li>
+					<li> Time for Mum Organic Cotton Pads </li>
+					<li> Carefree Maxi Pads </li>
+					<li> Carefree Maxi Flex </li>
+					<li> Bodyform Xtra Protection </li>
+					<li> L.A. Nights Strong Protection </li>
+					<li> Linda Ultra Pads </li>
 					
 				</ul>
-			</div>
+			</td>
+			<td><ul>			
+					<li> o.b. Tampons Original Ultra </li>
+					<li> Maxime Tampons Pro Comfort </li>
+					<li> The Honest Co. HappyDays </li>
+					<li> TOTM Smile Tampons </li>
+					<li> BON Tampons Silk </li>
+					<li> o.b. Invisible Touch </li>
+					<li> Flower Extra Sensitive Scented Pads </li>
+					<li> U by Kotex Click Compact Tampons </li>
+					<li> Playtex Gentle Glide 360 Unscented Tampon </li>
+					<li> Seventh Generation Applicator Tampons </li>
+					<li> Natcare Tampons - super </li>
+					<li> o.b. Ultra Absorbency Tampons </li>
+					<li> Playtex Ultra Sensitive Tampons </li>
+					<li> Tampax Pearl Compact  </li>
+					<li> o.b. Pro Comfort </li>
+					<li> Tampax Pro Sensitive </li>
+					<li> Tampax Pearl Tampons with LeakGuard </li>
+					<li> The Honest Co. First Choice </li>
+					<li> Tampax Pearl Ultra Protect </li>
+					<li> U by Kotex For Mothers </li>
+					<li> SensiCare Extra Protection </li>
+					<li> o.b. Playground Protection </li>
+					<li> Organyc SelfCare </li>
+					<li> Emma Sensitive Touch </li>
+					<li> Jasmine Breeze for Mothers </li>
+					<li> U by Kotex Active Protection  </li>
+					<li> Always Comfort ++ </li>
 			
-		</div>
-	</div>
-
-		<div class='col-sm-4'>
-	<!-- image -->
-		</div>
+				</ul>
+			</td>
+		</tr>
+	</table>	
+</div>
 	</div>	
 	</div>
 
@@ -127,20 +121,7 @@ Depending on your lifestyle, you should be able to choose the product that best 
 	</div>
 
 	<!--help and link to media-->
-	<div class='row'>
 
-		<div class='col-sm-4'>
-		<!-- First column content -->
-		</div>
-
-		<div class='col-sm-4'>
-		<!-- Second column content -->
-		</div>
-
-		<div class='col-sm-4'>
-		<!-- Third column content -->
-		</div>
-	</div>
 </div>
 	<script src="https://code.jquery.com/jquery.js"></script>
   
