--- a/FirstSite/regular_heavy.html
+++ b/FirstSite/regular_heavy.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -42,21 +42,22 @@
 	<div class='row'>
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> Manage your Menstrual Cycle </h2>
 	<h2> <small> Regular, Heavy Menstrual cycles</small></h2>
 		</div>
 	</div>
+	<br>
 <div class='row'>
 		<div class='col-md-12 text-center'>
-		<h3> introduction</h3>
-		<p> If you have a heavy and regular menstruation, this is the products we reccomend to you. </p>
+		<h3 class="conc"> Introduction</h3>
+		<p> If you have a heavy and regular menstruation, these are the products we reccomend to you. </p>
 
 	</div>
 	</div>	
-
+<br><br>
 	<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h3> tampon </h3>
+			<div class='col-sm-6 table'>
+				<h3> Tampons </h3>
 				<ul>
 					<li> Seventh Generation Applicator Tampons </li>
 					<li> Natcare Tampons - super </li>
@@ -64,8 +65,8 @@
 				</ul>
 
 			</div>
-			<div class='col-sm-6 text-center'>
-				<h3> pads </h3>
+			<div class='col-sm-6 table'>
+				<h3> Pads </h3>
 				<ul>
 					<li> Always Happy Days Pads </li>
 					<li> Carefree Sport Pads </li>
@@ -74,10 +75,10 @@
 
 			</div>
 	</div>
-
+<br>
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
-			<h3> conclusion </h3>
+			<h3 class= "conc"> Conclusion </h3>
 			<p> You want to perform at full performance at any time of the month. You are fed up with having to deal with regular heavy bleeding and want to focus on your goals in life. We trust these products will help you pursuing your goals without any distraction. </p>
 		</div>
 
