--- a/FirstSite/regular_light.html
+++ b/FirstSite/regular_light.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 <head>
- <title>Mentruscription</title>
+ <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
 
@@ -42,22 +42,22 @@
 	<div class='row'>
 		<div class='col-md-12 text-center'>
 	<!-- header 1 -->
-	<h1> Manage your Menstrual Cycle  </h1>
+	<h2> Manage your Menstrual Cycle  </h2>
 	<h2> <small> Regular, Light Menstrual cycles</small></h2>
 		</div>
 	</div>
-
+<br>
 		<div class='row'>
 		<div class='col-md-12 text-center'>
-		<h3> introduction</h3>
-		<p> If you have a light and regular menstruation, this is the products we reccomend to you. </p>
+		<h3 class="conc"> Introduction</h3>
+		<p> If you have a light and regular menstruation, these are the products we reccomend to you. </p>
 
 	</div>
 	</div>	
-
+<br><br>
 	<div class='row'>
-			<div class='col-sm-6 text-center'>
-				<h3> tampon </h3>
+			<div class='col-sm-6 table'>
+				<h3> Tampons </h3>
 				<ul>
 					<li> Playtex Ultra Sensitive Tampons </li>
 					<li> Tampax Pearl Compact  </li>
@@ -65,8 +65,8 @@
 				</ul>
 
 			</div>
-			<div class='col-sm-6 text-center'>
-				<h3> pads </h3>
+			<div class='col-sm-6 table'>
+				<h3> Pads </h3>
 				<ul>
 					<li> Maxithins Trust </li>
 					<li> U by Kotex Sensitive </li>
@@ -75,10 +75,10 @@
 
 			</div>
 	</div>
-
+<br>
 	<div class='row'> 
 		<div class='col-sm-12 text-center'>
-			<h3> conclusion </h3>
+			<h3 class="conc"> Conclusion </h3>
 			<p> Comfortable tampons are a must-have when you’re experiencing only a light flow. There are lots of brands on the market, so do your research and don’t be afraid to try different products to find out which tampons best suit your needs and provide you with the best possible protection. </p>
 		</div>
 	
