--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
  <title>Menstruscription</title>
  	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  	<link href='http://fonts.googleapis.com/css?family=Vast+Shadow' rel='stylesheet' type='text/css'>
+  	<link  rel="stylesheet" type="text/css"  href="http://fonts.googleapis.com/css?family=Vast+Shadow" />
 
   	<link rel="stylesheet" href="./css/bootstrap.css">
   	<link rel="stylesheet" href="main.css">
